--- a/themes/catalyst/style.css
+++ b/themes/catalyst/style.css
@@ -1001,7 +1001,7 @@ textarea {
     font-family: quattrocento, sans-serif;
     font-weight: 700;
     margin: 1.5rem auto;
-    line-height: 1.65rem;
+    line-height: 1.75rem;
     letter-spacing: 2px;
     margin: 0 auto;
     text-shadow: 1px 2px 5px #323232; }
@@ -1367,7 +1367,7 @@ object {
   font-family: quattrocento, sans-serif;
   font-weight: 700;
   margin: 1.5rem auto;
-  line-height: 1.65rem;
+  line-height: 1.75rem;
   letter-spacing: 2px;
   margin: 0 auto;
   text-shadow: 1px 2px 5px #323232; }
@@ -1627,11 +1627,15 @@ object {
         transform: rotate(0deg); } }
   .page-id-21 .mission-content .mission-image {
     width: 100%;
+    margin: 0 auto;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin: 0 auto; }
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+    -ms-flex-align: center;
+        align-items: center; }
     @media all and (min-width: 760px) {
       .page-id-21 .mission-content .mission-image {
         width: 25%; } }
@@ -1760,7 +1764,7 @@ object {
     font-family: quattrocento, sans-serif;
     font-weight: 700;
     margin: 1.5rem auto;
-    line-height: 1.65rem;
+    line-height: 1.75rem;
     letter-spacing: 2px;
     margin: 0 auto;
     text-shadow: 1px 2px 5px #323232; }
@@ -2277,7 +2281,7 @@ object {
     font-family: quattrocento, sans-serif;
     font-weight: 700;
     margin: 1.5rem auto;
-    line-height: 1.65rem;
+    line-height: 1.75rem;
     letter-spacing: 2px;
     margin: 0 auto;
     text-shadow: 1px 2px 5px #323232; }
@@ -2447,7 +2451,7 @@ object {
     font-family: quattrocento, sans-serif;
     font-weight: 700;
     margin: 1.5rem auto;
-    line-height: 1.65rem;
+    line-height: 1.75rem;
     letter-spacing: 2px;
     margin: 0 auto;
     text-shadow: 1px 2px 5px #323232; }
@@ -2852,7 +2856,7 @@ object {
     font-family: quattrocento, sans-serif;
     font-weight: 700;
     margin: 1.5rem auto;
-    line-height: 1.65rem;
+    line-height: 1.75rem;
     letter-spacing: 2px;
     margin: 0 auto;
     text-shadow: 1px 2px 5px #323232; }
@@ -2994,7 +2998,7 @@ object {
   font-family: quattrocento, sans-serif;
   font-weight: 700;
   margin: 1.5rem auto;
-  line-height: 1.65rem;
+  line-height: 1.75rem;
   letter-spacing: 2px;
   margin: 0 auto;
   text-shadow: 1px 2px 5px #323232; }
@@ -3134,7 +3138,7 @@ object {
   font-family: quattrocento, sans-serif;
   font-weight: 700;
   margin: 1.5rem auto;
-  line-height: 1.65rem;
+  line-height: 1.75rem;
   letter-spacing: 2px;
   margin: 0 auto;
   text-shadow: 1px 2px 5px #323232; }
